# FuzzyDroplets

./: .gitignore  CMakeLists.txt  README.md  buildFromSource.md  fuzzyqt.h  main.cpp
core/: README.md  approximately.h  binormal.h  centroids.h  color.h  colorscheme.h  data.cpp  data.h  design.cpp  design.h  emclustering.h  euclidean.h  fuzzycolor.h  geometry.h  gmm.cpp  gmm.h  hungarianalgorithm.cpp  hungarianalgorithm.h  kernel.h  kmeans.cpp  kmeans.h  line_feeder.hpp  mapped_file.hpp  matrix.h  mean.h  median.h  quadtree.h  round.h  skewnormal.h  sortedvector.h  toms462.cpp  toms462.h  trim_string_view.hpp  vectorqueue.h
doc/: buildFromSource.md
gui/: assignmentmethodwidget.cpp  assignmentmethodwidget.h  assignmentwidget.cpp  assignmentwidget.h  clusteringwidget.cpp  clusteringwidget.h  clustermethodwidget.cpp  clustermethodwidget.h  dbscanwidget.cpp  dbscanwidget.h  dropletgraphwidget.cpp  dropletgraphwidget.h  emclustermethodwidget.cpp  emclustermethodwidget.h  emworker.cpp  emworker.h  experimentaldesignwidget.cpp  experimentaldesignwidget.h  gmmassignmentwidget.cpp  gmmassignmentwidget.h  gmmwidget.cpp  gmmwidget.h  icons.qrc  kmeanswidget.cpp  kmeanswidget.h  mainwindow.cpp  mainwindow.h  nearestneighbourswidget.cpp  nearestneighbourswidget.h  paintingwidget.cpp  paintingwidget.h  pointcloud.cpp  pointcloud.h  randomforestwidget.cpp  randomforestwidget.h  samplelistwidget.cpp  samplelistwidget.h
gui/generic/: colorswatch.cpp  colorswatch.h  comboboxitemdelegate.cpp  comboboxitemdelegate.h  command.cpp  command.h  commandstack.cpp  commandstack.h  doubleslideraction.cpp  doubleslideraction.h  flowlayout.cpp  launchwidget.cpp  launchwidget.h  nofocusitemdelegate.cpp  nofocusitemdelegate.h  notification.cpp  notification.h  shelfwidget.cpp  shelfwidget.h  slideraction.h  stackedwidget.cpp  stackedwidget.h  themedicon.cpp  themedicon.h
gui/icons/: README.md
gui/plot/: axis.cpp  axis.h  boxgraphbase.cpp  boxgraphbase.h  continuousaxis.cpp  continuousaxis.h  marker.h  marker2d.h  polygon.cpp  polygon.h  primitive.cpp  primitive.h  ringmarker.cpp  ringmarker.h  scatterplotbox2.cpp  scatterplotbox2.h  textmarker.cpp  textmarker.h
ranger/: Forest.cpp  Forest.h  README.md  README.txt  globals.h
